added animations, kinda resembles an app

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Елдърс Апп</string>
+    <string name="app_name">Търсене на потребители</string>
     <string name="repositories"> Проекта</string>
     <string name="icon">окинка</string>
     <string name="gists">Бързи връзки</string>
